--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -139,43 +139,73 @@
             margin-top: 10px;
         }
 
-        /* Navigation */
+        /* Navigation - Updated with Sticky Position & Logo */
         nav {
             background-color: var(--primary-color);
-            padding: 14px 0;
+            padding: 10px 0; /* Reduced padding slightly */
             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            /* === Sticky Navigation === */
+            position: -webkit-sticky; /* For Safari */
+            position: sticky;
+            top: 0; /* Stick to the top */
+            z-index: 1000; /* Ensure it stays above other content */
+            /* === End Sticky Navigation === */
         }
 
-        nav div {
+        /* Navigation Container */
+        nav .nav-container {
             max-width: 1000px;
             margin: auto;
             display: flex;
-            justify-content: center;
+            justify-content: space-between; /* Đẩy logo sang trái, link sang phải */
             align-items: center;
-            gap: 30px;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Cho phép wrap trên màn hình nhỏ */
+            padding: 0 20px; /* Thêm padding ngang */
+            box-sizing: border-box;
         }
 
-        nav a {
+        /* Navigation Logo */
+        nav .nav-logo-link {
+          line-height: 0; /* Remove extra space below image */
+        }
+        nav .nav-logo {
+          height: 40px; /* Điều chỉnh chiều cao logo */
+          width: auto;
+          display: block; /* Prevent bottom space */
+          /* margin-right: 20px; /* Khoảng cách giữa logo và link đầu tiên - bỏ đi vì dùng gap của flex */
+        }
+
+        /* Navigation Links Group */
+        nav .nav-links-group {
+          display: flex;
+          align-items: center;
+          gap: 20px; /* Khoảng cách giữa các link và dấu | */
+          flex-wrap: wrap; /* Cho phép link xuống dòng */
+          justify-content: center; /* Căn giữa các link nếu xuống dòng */
+        }
+
+
+        nav a { /* Styling for nav text links */
             color: var(--white);
             text-decoration: none;
             font-size: 19px;
-            font-weight: 700;
+            font-weight: 600; /* Slightly less bold than 700 */
             padding: 5px 0;
             border-bottom: 2px solid transparent;
             transition: border-bottom 0.3s ease;
         }
 
-        nav a:hover {
+        nav .nav-links-group a:hover { /* Hover for text links only */
             border-bottom: 2px solid var(--white);
             text-decoration: none;
             color: var(--white);
         }
 
-        nav span {
+        nav span { /* Separator style */
             color: rgba(255, 255, 255, 0.5);
             font-size: 20px;
             line-height: 1;
+            font-weight: 400; /* Normal weight for separator */
         }
 
         /* Credits */
@@ -409,9 +439,16 @@
               color: inherit;
           }
           footer p:last-child {
-            font-size: 15px;
-            opacity: 0.85;
+            /* font-size: 15px; */ /* Let contact info use base footer size */
+            /* opacity: 0.85; */
           }
+          /* Footer Contact Info */
+          footer .contact-info {
+            margin-top: 15px; /* Add space above contact */
+            /* font-size: 15px; */ /* Adjust size if needed */
+            opacity: 0.9;
+          }
+
 
         /* Parameters Table Disclaimer */
         .parameters-disclaimer {
@@ -442,8 +479,19 @@
             }
             header h1 { font-size: 26px; }
             .subhead { font-size: 17px; }
-            nav a { font-size: 17px; font-weight: 600;}
-            nav div { gap: 20px; }
+            nav .nav-container {
+              padding: 0 15px; /* Giảm padding */
+            }
+            nav .nav-links-group {
+                gap: 15px; /* Giảm khoảng cách link */
+                /* Cân nhắc căn phải nếu muốn: justify-content: flex-end; */
+            }
+             nav .nav-logo {
+                height: 35px; /* Logo nhỏ hơn */
+             }
+             nav a { font-size: 17px; } /* Kích thước link nav trên mobile */
+             nav span { font-size: 18px; }
+
             section { padding: 25px 20px; }
             h2 { font-size: 24px; margin-bottom: 30px; }
             h3 { font-size: 20px; }
@@ -451,15 +499,29 @@
             th {font-size: 16px;}
             .credits p { font-size: 16px; }
             footer p {font-size: 15px;}
-            footer p:last-child {font-size: 14px;}
+            /* footer p:last-child {font-size: 14px;} */
             .formula-box { font-size: 16px; padding: 10px 18px;}
+            footer .contact-info { font-size: 14px; }
         }
         @media (max-width: 480px) {
             body { font-size: 16px; }
             header h1 { font-size: 22px; }
             .subhead { font-size: 15px; }
-            nav a { font-size: 15px; }
-            nav div { gap: 15px; }
+             nav .nav-container {
+                padding: 0 10px;
+                /* Có thể cân nhắc chuyển thành cột nếu quá chật */
+                /* flex-direction: column; gap: 10px; */
+            }
+             nav .nav-links-group {
+              gap: 10px;
+              justify-content: center; /* Ensure links center when wrapped */
+             }
+             nav .nav-logo {
+              height: 30px;
+             }
+             nav a { font-size: 15px; }
+             nav span { font-size: 16px; }
+
             h2 { font-size: 21px;}
             h3 { font-size: 19px;}
             th { font-size: 15px; }
@@ -469,7 +531,8 @@
             .view-study-link.small-link { font-size: 15px; padding: 8px 15px;}
             .formula-box { font-size: 15px; padding: 8px 15px;}
             footer p {font-size: 14px;}
-            footer p:last-child {font-size: 13px;}
+            /* footer p:last-child {font-size: 13px;} */
+            footer .contact-info { font-size: 13px; }
         }
     </style>
 </head>
@@ -484,16 +547,20 @@
     </header>
 
     <nav>
-      <div>
-        <a href="#guidelines">KHUYẾN CÁO</a>
-        <span>|</span>
-        <a href="#studies">NGHIÊN CỨU</a>
-        <span>|</span>
-        <a href="#dose-limits">GIỚI HẠN LIỀU</a>
-        <span>|</span>
-        <a href="#parameters">THÔNG SỐ MÁY</a>
-        <span>|</span>
-        <a href="https://vnrad.tech/dosecal/" target="_blank">CÔNG CỤ TÍNH LIỀU</a>
+      <div class="nav-container">
+        <a href="#" class="nav-logo-link" aria-label="Trang chủ KTV 3 Miền"> <img src="https://i.postimg.cc/tTbb7VJW/81dc535f2325f27bab34.jpg" alt="Logo KTV 3 Miền" class="nav-logo">
+        </a>
+        <div class="nav-links-group">
+          <a href="#guidelines">KHUYẾN CÁO</a>
+          <span>|</span>
+          <a href="#studies">NGHIÊN CỨU</a>
+          <span>|</span>
+          <a href="#dose-limits">GIỚI HẠN LIỀU</a>
+          <span>|</span>
+          <a href="#parameters">THÔNG SỐ MÁY</a>
+          <span>|</span>
+          <a href="https://vnrad.tech/dosecal/" target="_blank">CÔNG CỤ TÍNH LIỀU</a>
+        </div>
       </div>
     </nav>
 
@@ -711,8 +778,7 @@
                       <th>Hãng máy</th>
                       <th>Tên AEC*</th>
                       <th>Dòng máy/Tên Protocol</th>
-                      <th>Thông số (Click ảnh xem link)</th>
-                  </tr>
+                      <th>Thông số (Click ảnh/link xem chi tiết)</th> </tr>
               </thead>
               <tbody id="table-body">
                   <tr><td colspan="4" style="text-align:center; padding: 30px;">Đang tải dữ liệu thông số máy...</td></tr>
@@ -726,7 +792,7 @@
         <p>© <span id="current-year"></span> <strong>Cộng đồng kỹ thuật viên hình ảnh y học Việt Nam</strong> – Trang thông tin Tầm soát Ung thư phổi bằng CT liều thấp</p>
         <p>Biên soạn bởi nhóm <strong>KTV 3 Miền</strong> | Dành cho mục đích đào tạo & tham khảo y khoa</p>
         <p>Mọi thông tin trên trang chỉ mang tính chất tham khảo, không thay thế cho chẩn đoán và chỉ định của bác sĩ chuyên khoa.</p>
-        <p>Liên hệ: Lê Thanh Trọng - 0944406507</p>
+        <p class="contact-info">Liên hệ góp ý: Lê Thanh Trọng - SĐT/Zalo: 0944406507</p>
     </footer>
 
     <script>
@@ -760,28 +826,40 @@
                    }
 
                    const tr = document.createElement("tr");
-                   // Thay đổi: Gán '' thay vì 'N/A' khi dữ liệu thiếu
+                   // Gán '' thay vì 'N/A' khi dữ liệu thiếu
                    let hangMay = row.HANGMAY || '';
                    let tenMay = row.TENMAY || '';
                    let aec = row.AEC || '';
-                   let link = row.LINK;
+                   let link = row.LINK; // Link can be image URL or other URL
                    let hangMayClass = typeof hangMay === 'string' ? hangMay.toLowerCase().replace(/[\s_]+/g, '-') : 'unknown-vendor';
-                   let isValidImageUrl = link && typeof link === 'string' && (link.startsWith('http://') || link.startsWith('https://') || link.startsWith('data:image'));
-                   let parameterCellContent = 'Không có ảnh';
+                   let parameterCellContent = ''; // Start with empty content
 
-                   if (isValidImageUrl) {
-                        parameterCellContent = `<a href="${link}" target="_blank" title="Xem chi tiết thông số ${tenMay}">
-                                                <img src="${link}" alt="Thông số tham khảo cho ${tenMay} (${hangMay})" >
-                                               </a>`;
+                   // Check if link is a valid URL (image or otherwise)
+                   let isValidUrl = link && typeof link === 'string' && (link.startsWith('http://') || link.startsWith('https://'));
+                   let isImageUrl = isValidUrl && (link.match(/\.(jpeg|jpg|gif|png|svg|webp)$/i) != null || link.startsWith('data:image'));
+
+                   if (isImageUrl) {
+                       // If it's an image URL, show the image linked
+                       parameterCellContent = `<a href="${link}" target="_blank" title="Xem chi tiết thông số ${tenMay}">
+                                               <img src="${link}" alt="Thông số tham khảo cho ${tenMay} (${hangMay})" >
+                                              </a>`;
+                   } else if (isValidUrl) {
+                       // If it's a valid URL but not an image, show a text link
+                       parameterCellContent = `<a href="${link}" target="_blank" class="view-study-link small-link" style="font-size: 14px; padding: 6px 10px;">Xem chi tiết</a>`;
                    } else if (link) {
-                         parameterCellContent = `<span>Link không hợp lệ</span>`;
+                       // If link field has content but it's not a valid URL
+                       parameterCellContent = `<span>Dữ liệu/Link không hợp lệ</span>`;
+                   } else {
+                       // If link field is empty or null
+                       parameterCellContent = `<span>Chưa có thông số</span>`;
                    }
+
 
                    tr.innerHTML = `
                        <td class="highlight-col ${hangMayClass}">${hangMay}</td>
                        <td>${aec}</td>
                        <td>${tenMay}</td>
-                       <td style="text-align: center;">${parameterCellContent}</td>
+                       <td style="text-align: center; vertical-align: middle;">${parameterCellContent}</td>
                    `;
                    tableBody.appendChild(tr);
                });
