--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -338,7 +338,7 @@
         font-size: 0.95em;
         color: #333;
         line-height: 1.6;
-        text-align: justify;
+        text-align: justify; /* Already justified */
          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Revert font */
     }
 
@@ -432,6 +432,25 @@
         color: #ffffff;
         text-decoration: underline;
      }
+
+    /* --- QUY TẮC CĂN ĐỀU CHỮ ĐÃ THÊM --- */
+    .calculator-section > p,
+    .warning-section > p,
+    .explanation-section p,
+    .dose-comparison-section > p,
+    .caption-text { /* .caption-text đã có justify, thêm vào đây để rõ ràng */
+        text-align: justify;
+    }
+    /* TÙY CHỌN: Căn đều chữ cho các mục danh sách (<li>) nếu muốn */
+    /* Bỏ comment (xóa /* và */) nếu bạn muốn căn đều cả các mục trong danh sách */
+    /*
+    .warning-section ul li,
+    .explanation-section ul li {
+        text-align: justify;
+    }
+    */
+    /* --- KẾT THÚC PHẦN CĂN ĐỀU CHỮ --- */
+
   </style>
 
 </head>
@@ -495,69 +514,69 @@
     </section>
 
     <section class="content-section illustration-section">
-         <h2>Minh họa Báo cáo Liều (<span lang="en">Dose Report</span>) - Dạng Văn bản</h2>
-         <div class="dose-report-text-container">
-            <div class="dose-report-header">
-                <div class="report-title-meta">
-                    <h3>DOSE REPORT</h3>
-                    <div class="meta-data">
-                        <span><strong>Tổng mAs:</strong> 2326</span>
-                        <span><strong>Tổng DLP:</strong> 738 mGy·cm</span>
-                    </div>
-                    <div class="general-info">
-                        <p>- Báo cáo liều được tạo sau khi kết thúc quá trình quét.</p>
-                        <p>- Cung cấp thông tin về kV, mAs, $CTDI_{vol}$, $DLP$.</p>
-                    </div>
-                </div>
-                <div class="phantom-info">
-                    <h4>LIỀU HẤP THỤ</h4>
-                    <p>Ước tính Liều hiệu dụng ($E$) dựa trên:</p>
-                    <p>$E \approx \text{Tổng } DLP \times k$</p>
-                    <hr>
-                    <p><strong>Tham chiếu Phantom:</strong></p>
-                    <p>S: $\emptyset$ 16 cm (Đầu/Nhỏ)</p>
-                    <p>L: $\emptyset$ 32 cm (Thân/Lớn)</p>
-                </div>
-            </div>
+        <h2>Minh họa Báo cáo Liều (<span lang="en">Dose Report</span>) - Dạng Văn bản</h2>
+        <div class="dose-report-text-container">
+          <div class="dose-report-header">
+              <div class="report-title-meta">
+                  <h3>DOSE REPORT</h3>
+                  <div class="meta-data">
+                      <span><strong>Tổng mAs:</strong> 2326</span>
+                      <span><strong>Tổng DLP:</strong> 738 mGy·cm</span>
+                  </div>
+                  <div class="general-info">
+                      <p>- Báo cáo liều được tạo sau khi kết thúc quá trình quét.</p>
+                      <p>- Cung cấp thông tin về kV, mAs, $CTDI_{vol}$, $DLP$.</p>
+                  </div>
+              </div>
+              <div class="phantom-info">
+                  <h4>LIỀU HẤP THỤ</h4>
+                  <p>Ước tính Liều hiệu dụng ($E$) dựa trên:</p>
+                  <p>$E \approx \text{Tổng } DLP \times k$</p>
+                  <hr>
+                  <p><strong>Tham chiếu Phantom:</strong></p>
+                  <p>S: $\emptyset$ 16 cm (Đầu/Nhỏ)</p>
+                  <p>L: $\emptyset$ 32 cm (Thân/Lớn)</p>
+              </div>
+          </div>
 
-            <table class="report-table">
-                <thead>
-                    <tr>
-                        <th>Scan</th>
-                        <th>kV</th>
-                        <th>mAs / ref.</th>
-                        <th>$CTDI_{vol}$* (mGy)</th>
-                        <th>$DLP$ (mGy·cm)</th>
-                        <th>TI</th>
-                        <th>cSL (mm)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1. Topogram</td>
-                        <td>120</td>
-                        <td>35</td>
-                        <td>0.29 (S)</td>
-                        <td>6.7</td>
-                        <td>2.4</td>
-                        <td>0.6</td>
-                    </tr>
-                    <tr>
-                        <td>2. Head</td>
-                        <td>100</td>
-                        <td>405 / 542</td>
-                        <td>39.25 (S)</td>
-                        <td>731.2</td>
-                        <td>1.0</td>
-                        <td>0.6</td>
-                    </tr>
-                    </tbody>
-            </table>
-             <p class="report-note">*Giá trị $CTDI_{vol}$ được tham chiếu theo phantom S ( $\emptyset$ 16 cm).</p>
-         </div>
-         <p class="caption-text">
+          <table class="report-table">
+              <thead>
+                  <tr>
+                      <th>Scan</th>
+                      <th>kV</th>
+                      <th>mAs / ref.</th>
+                      <th>$CTDI_{vol}$* (mGy)</th>
+                      <th>$DLP$ (mGy·cm)</th>
+                      <th>TI</th>
+                      <th>cSL (mm)</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>1. Topogram</td>
+                      <td>120</td>
+                      <td>35</td>
+                      <td>0.29 (S)</td>
+                      <td>6.7</td>
+                      <td>2.4</td>
+                      <td>0.6</td>
+                  </tr>
+                  <tr>
+                      <td>2. Head</td>
+                      <td>100</td>
+                      <td>405 / 542</td>
+                      <td>39.25 (S)</td>
+                      <td>731.2</td>
+                      <td>1.0</td>
+                      <td>0.6</td>
+                  </tr>
+                  </tbody>
+          </table>
+           <p class="report-note">*Giá trị $CTDI_{vol}$ được tham chiếu theo phantom S ( $\emptyset$ 16 cm).</p>
+        </div>
+        <p class="caption-text">
              Minh họa cấu trúc một bảng <span lang="en">Dose Report</span> điển hình hiển thị sau khi kết thúc quét <span lang="en">CT</span>. Các thông số quan trọng cần lưu ý bao gồm $CTDI_{vol}$ (và loại phantom tham chiếu), $DLP$, <span lang="en">mAs</span>, $kVp$. Thông tin này là cơ sở để theo dõi liều và tính toán liều hiệu dụng ước tính cho bệnh nhân.
-         </p>
+        </p>
      </section>
 
     <article class="content-section warning-section">
@@ -610,41 +629,41 @@
     </article>
 
     <article class="content-section explanation-section">
-       <h2>Giải thích về Liều hiệu dụng ($E$)</h2>
-       <p>Liều hiệu dụng (<span lang="en">Effective Dose</span>, ký hiệu $E$) là một đại lượng được định nghĩa bởi Ủy ban Quốc tế về An toàn Bức xạ (<span lang="en">ICRP</span>) để ước tính nguy cơ ngẫu nhiên dài hạn (chủ yếu là nguy cơ gây ung thư và di truyền) đối với sức khỏe con người từ việc phơi nhiễm bức xạ ion hóa. Nó tính đến:</p>
-       <ul>
-           <li>Lượng liều hấp thụ bởi các cơ quan và mô khác nhau.</li>
-           <li>Loại bức xạ ion hóa (thông qua hệ số trọng số bức xạ, $W_R$, đối với tia X trong CT thì $W_R=1$).</li>
-           <li>Độ nhạy cảm khác nhau của các cơ quan và mô đối với tác động có hại của bức xạ (thông qua hệ số trọng số mô, $W_T$).</li>
-       </ul>
-       <p>Đơn vị của Liều hiệu dụng là <span lang="en">Sievert</span> ($Sv$), nhưng trong chẩn đoán y tế thường dùng <span lang="en">miliSievert</span> ($mSv$), với $1 \, Sv = 1000 \, mSv$.</p>
-
-       <h3>Công thức tổng quát (theo <span lang="en">ICRP</span>):</h3>
-       <div class="formula-display">$$E = \sum_T W_T \times H_T = \sum_T W_T \times \sum_R (W_R \times D_{T,R})$$</div>
-       <p>Trong đó:</p>
-       <ul>
-           <li>$H_T$: Liều tương đương ở mô hoặc cơ quan $T$.</li>
-           <li>$W_T$: Hệ số trọng số mô cho mô $T$.</li>
-           <li>$D_{T,R}$: Liều hấp thụ trung bình từ bức xạ $R$ trong mô $T$.</li>
-           <li>$W_R$: Hệ số trọng số bức xạ cho loại bức xạ $R$.</li>
-       </ul>
-
-       <h3>Ước tính Liều hiệu dụng từ $DLP$ trong <span lang="en">CT</span>:</h3>
-       <p>Trong thực hành lâm sàng, việc tính $E$ theo công thức đầy đủ là phức tạp. Do đó, người ta thường sử dụng phương pháp ước tính dựa trên $DLP$ và một hệ số chuyển đổi $k$ (<span lang="en">k-factor</span>) đặc trưng cho vùng cơ thể được quét. Hệ số $k$ này được tính toán dựa trên các mô hình <span lang="en">phantom</span> và phân bố liều điển hình.</p>
-       <div class="formula-display">$$E \; (mSv) \approx DLP \; (mGy \cdot cm) \times k \; (mSv \cdot mGy^{-1} \cdot cm^{-1})$$</div>
-       <p>Hệ số $k$ có giá trị khác nhau cho các vùng cơ thể (ví dụ: đầu, ngực, bụng, chậu) và có thể khác nhau một chút giữa các tài liệu tham khảo hoặc chuẩn quốc gia.</p>
-
-       <h3>Ý nghĩa trong thực hành lâm sàng:</h3>
-       <p>Liều hiệu dụng $E$ cho phép:</p>
+        <h2>Giải thích về Liều hiệu dụng ($E$)</h2>
+        <p>Liều hiệu dụng (<span lang="en">Effective Dose</span>, ký hiệu $E$) là một đại lượng được định nghĩa bởi Ủy ban Quốc tế về An toàn Bức xạ (<span lang="en">ICRP</span>) để ước tính nguy cơ ngẫu nhiên dài hạn (chủ yếu là nguy cơ gây ung thư và di truyền) đối với sức khỏe con người từ việc phơi nhiễm bức xạ ion hóa. Nó tính đến:</p>
         <ul>
+            <li>Lượng liều hấp thụ bởi các cơ quan và mô khác nhau.</li>
+            <li>Loại bức xạ ion hóa (thông qua hệ số trọng số bức xạ, $W_R$, đối với tia X trong CT thì $W_R=1$).</li>
+            <li>Độ nhạy cảm khác nhau của các cơ quan và mô đối với tác động có hại của bức xạ (thông qua hệ số trọng số mô, $W_T$).</li>
+        </ul>
+        <p>Đơn vị của Liều hiệu dụng là <span lang="en">Sievert</span> ($Sv$), nhưng trong chẩn đoán y tế thường dùng <span lang="en">miliSievert</span> ($mSv$), với $1 \, Sv = 1000 \, mSv$.</p>
+
+        <h3>Công thức tổng quát (theo <span lang="en">ICRP</span>):</h3>
+        <div class="formula-display">$$E = \sum_T W_T \times H_T = \sum_T W_T \times \sum_R (W_R \times D_{T,R})$$</div>
+        <p>Trong đó:</p>
+        <ul>
+            <li>$H_T$: Liều tương đương ở mô hoặc cơ quan $T$.</li>
+            <li>$W_T$: Hệ số trọng số mô cho mô $T$.</li>
+            <li>$D_{T,R}$: Liều hấp thụ trung bình từ bức xạ $R$ trong mô $T$.</li>
+            <li>$W_R$: Hệ số trọng số bức xạ cho loại bức xạ $R$.</li>
+        </ul>
+
+        <h3>Ước tính Liều hiệu dụng từ $DLP$ trong <span lang="en">CT</span>:</h3>
+        <p>Trong thực hành lâm sàng, việc tính $E$ theo công thức đầy đủ là phức tạp. Do đó, người ta thường sử dụng phương pháp ước tính dựa trên $DLP$ và một hệ số chuyển đổi $k$ (<span lang="en">k-factor</span>) đặc trưng cho vùng cơ thể được quét. Hệ số $k$ này được tính toán dựa trên các mô hình <span lang="en">phantom</span> và phân bố liều điển hình.</p>
+        <div class="formula-display">$$E \; (mSv) \approx DLP \; (mGy \cdot cm) \times k \; (mSv \cdot mGy^{-1} \cdot cm^{-1})$$</div>
+        <p>Hệ số $k$ có giá trị khác nhau cho các vùng cơ thể (ví dụ: đầu, ngực, bụng, chậu) và có thể khác nhau một chút giữa các tài liệu tham khảo hoặc chuẩn quốc gia.</p>
+
+        <h3>Ý nghĩa trong thực hành lâm sàng:</h3>
+        <p>Liều hiệu dụng $E$ cho phép:</p>
+         <ul>
             <li>Đánh giá và so sánh nguy cơ bức xạ tiềm ẩn từ các loại xét nghiệm hình ảnh khác nhau (ví dụ: so sánh <span lang="en">CT</span> ngực với X-quang ngực).</li>
             <li>Hỗ trợ việc cân bằng giữa lợi ích chẩn đoán và nguy cơ bức xạ khi lựa chọn hoặc tối ưu hóa quy trình chụp.</li>
             <li>Theo dõi liều tích lũy cho bệnh nhân, đặc biệt là những người cần chụp chiếu nhiều lần.</li>
             <li>Thiết lập và kiểm tra các mức tham chiếu chẩn đoán quốc gia hoặc địa phương (<span lang="en">Diagnostic Reference Levels - DRLs</span>).</li>
-        </ul>
-        <h4>Ví dụ tính $E$:</h4>
-        <p>Sử dụng ví dụ $DLP = 350 \, mGy \cdot cm$ cho <span lang="en">CT</span> bụng. Giả sử hệ số $k$ cho vùng bụng là $0.015 \, mSv \cdot mGy^{-1} \cdot cm^{-1}$:</p>
-        <div class="formula-display">$$E \approx 350 \, mGy \cdot cm \times 0.015 \, mSv \cdot mGy^{-1} \cdot cm^{-1} = 5.25 \, mSv$$</div>
+         </ul>
+         <h4>Ví dụ tính $E$:</h4>
+         <p>Sử dụng ví dụ $DLP = 350 \, mGy \cdot cm$ cho <span lang="en">CT</span> bụng. Giả sử hệ số $k$ cho vùng bụng là $0.015 \, mSv \cdot mGy^{-1} \cdot cm^{-1}$:</p>
+         <div class="formula-display">$$E \approx 350 \, mGy \cdot cm \times 0.015 \, mSv \cdot mGy^{-1} \cdot cm^{-1} = 5.25 \, mSv$$</div>
     </article>
 
     <article class="content-section explanation-section">
@@ -711,12 +730,12 @@
   </main>
 
   <footer class="main-footer">
-     <div>
-       <p>© <span id="copyright-year">2025</span> <strong>Cộng đồng Kỹ thuật viên hình ảnh y học Việt Nam</strong> – Tầm soát Ung thư phổi bằng <span lang="en">CT</span> liều thấp</p>
-       <p>Biên soạn bởi nhóm <strong>KTV 3 Miền</strong> | Mục đích: Đào tạo & Tham khảo y khoa</p>
-       <p><em>Tuyên bố miễn trừ trách nhiệm: Thông tin trên trang web này chỉ mang tính tham khảo, không thay thế cho chẩn đoán, chỉ định hoặc tư vấn y tế chuyên nghiệp từ bác sĩ hoặc chuyên gia y tế có trình độ.</em></p>
-     </div>
-   </footer>
+   <div>
+     <p>© <span id="copyright-year">2025</span> <strong>Cộng đồng Kỹ thuật viên hình ảnh y học Việt Nam</strong> – Tầm soát Ung thư phổi bằng <span lang="en">CT</span> liều thấp</p>
+     <p>Biên soạn bởi nhóm <strong>KTV 3 Miền</strong> | Mục đích: Đào tạo & Tham khảo y khoa</p>
+     <p><em>Tuyên bố miễn trừ trách nhiệm: Thông tin trên trang web này chỉ mang tính tham khảo, không thay thế cho chẩn đoán, chỉ định hoặc tư vấn y tế chuyên nghiệp từ bác sĩ hoặc chuyên gia y tế có trình độ.</em></p>
+   </div>
+  </footer>
 
   <script>
     // Function to update K value based on selected body region
