--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -194,8 +194,44 @@
     .source strong { font-weight: 600; }
     .source a { color: #0056b3; }
     /* Home Button Style */
-    .home-button { display: block; width: fit-content; padding: 10px 20px; background-color: #6c757d; color: white; border: none; border-radius: 6px; text-align: center; font-size: 1em; margin: 30px auto 10px auto; cursor: pointer; text-decoration: none; transition: background-color 0.2s ease; }
-    .home-button:hover { background-color: #5a6268; color: white; text-decoration: none; }
+.home-button {
+  display: block;
+  width: fit-content; /* Adjust width to content */
+  padding: 10px 20px;
+  /* background-color: #6c757d; */ /* Comment hoặc xóa dòng màu xám cũ */
+  background-color: #007BFF; /* <<< THAY ĐỔI THÀNH MÀU XANH BLUE */
+  color: white;
+  border: none;
+  border-radius: 6px;
+  text-align: center;
+  font-size: 1em;
+  margin: 30px auto 10px auto; /* Center and adjust margins */
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.2s ease;
+/* Home Button Style */
+.home-button {
+  display: block;
+  width: fit-content; /* Adjust width to content */
+  padding: 10px 20px;
+  /* background-color: #6c757d; */ /* Comment hoặc xóa dòng màu xám cũ */
+  background-color: #007BFF; /* <<< THAY ĐỔI THÀNH MÀU XANH BLUE */
+  color: white;
+  border: none;
+  border-radius: 6px;
+  text-align: center;
+  font-size: 1em;
+  margin: 30px auto 10px auto; /* Center and adjust margins */
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.2s ease;
+}
+.home-button:hover {
+  /* background-color: #5a6268; */ /* Comment hoặc xóa dòng màu xám đậm cũ */
+  background-color: #0056b3; /* <<< THAY ĐỔI THÀNH MÀU XANH ĐẬM HƠN KHI HOVER */
+  color: white;
+  text-decoration: none;
+}
     /* Dose Report Illustration */
     .dose-report-text-container { border: 1px solid #007BFF; border-radius: 8px; padding: 20px; background-color: #f8f9fa; font-family: 'Courier New', Courier, monospace; font-size: 0.9em; margin-bottom: 15px; }
     .dose-report-header { display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-start; border-bottom: 1px dashed #007BFF; padding-bottom: 15px; margin-bottom: 15px; }
