--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -347,9 +347,9 @@
   <div class="page-container">
 
       <nav class="side-nav">
-          <h3>Điều hướng nhanh</h3>
+          <h3>MỤC LỤC TRANG</h3>
           <ul>
-              <li><a href="#calculator">Máy tính Liều</a></li>
+              <li><a href="#calculator">Tính Liều</a></li>
               <li><a href="#dose-report">Minh họa Dose Report</a></li>
               <li><a href="#jama-warning">Cảnh báo JAMA</a></li>
               <li><a href="#dlp-explanation">Giải thích DLP</a></li>
